# order_book_server

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build_btc_diff_limitations.md  convert_snapshot_index_json_to_sqlite.py  main.rs
.cargo/: config.toml
binance_book/: Cargo.toml  README.md
binance_book/src/: lib.rs  main.rs
binaries/: Cargo.toml
compute_l4/: Cargo.toml  __init__.py
compute_l4/src/: lib.rs  main.rs
fifo_listener/: Cargo.toml  python_example.py  supervisor.conf
fifo_listener/src/: archive.rs  lib.rs  listener.rs  main.rs  protocol.rs
fifo_probe/: Cargo.toml
fifo_probe/src/: main.rs
hl_book/: Cargo.toml  __init__.py
hl_book/src/: lib.rs
hl_py/: Cargo.toml  __init__.py
hl_py/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/listeners/: directory.rs  mod.rs
server/src/listeners/order_book/: lite.rs  mod.rs  state.rs  utils.rs
server/src/order_book/: levels.rs  linked_list.rs  mod.rs  multi_book.rs  types.rs
server/src/servers/: websocket_server.rs
server/src/types/: binary_protocol.rs  inner.rs  mod.rs  node_data.rs  subscription.rs
snapshot_bench/: Cargo.toml
snapshot_bench/src/: main.rs
tools/: extract_btc_eth_snapshot.py
