[package]
name = "binance_book"
version = "0.1.0"
edition = "2024"

[lib]
name = "binance_book"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
arrow-array = "54.2.1"
arrow-schema = "54.2.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3.31"
log = "0.4"
mysql = "25.0"
parquet = { version = "54.2.1", features = ["arrow", "zstd"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", default-features = false, features = [
    "connect",
    "rustls-tls-webpki-roots",
] }

[lints]
workspace = true
