[package]
name = "binaries"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
server = { path = "../server" }
env_logger = "0.11.8"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
clap = { version = "4.5.42", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
parquet = { version = "51", features = ["zstd"] }
rmp-serde = "1.3"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1.10"

[lints]
workspace = true
