[package]
name = "binaries"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
server = { path = "../server" }
env_logger = "0.11.8"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
clap = { version = "4.5.42", features = ["derive"] }
anyhow = "1.0"
arrow-array = "54.2.1"
arrow-schema = "54.2.1"
chrono = "0.4"
lz4 = "1.28.1"
parquet = { version = "54.2.1", features = ["arrow"] }
rust_decimal = "1.39.0"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.14", features = ["serde_impl"] }
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
async-compression = { version = "0.4.19", features = ["tokio", "lz4"] }

[lints]
workspace = true
