[package]
name = "compute_l4"
version = "0.1.0"
edition = "2024"

[lib]
name = "compute_l4"
crate-type = ["cdylib", "rlib"]

[dependencies]
rmp-serde = "1.3"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
zstd = "0.13"

[lints]
workspace = true
