[package]
name = "fifo_listener"
version = "0.1.0"
edition = "2024"

[lib]
name = "fifo_listener"
crate-type = ["cdylib", "rlib"]

[dependencies]
aliyun-oss-rust-sdk = "0.2.2"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
memchr = "2.7.4"
parquet = { version = "51", features = ["zstd"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = "0.20.0"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
