[package]
name = "fifo_listener"
version = "0.1.0"
edition = "2024"

[lib]
name = "fifo_listener"
crate-type = ["cdylib", "rlib"]

[dependencies]
aliyun-oss-rust-sdk = "0.2.2"
compute_l4 = { path = "../compute_l4" }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
memchr = "2.7.4"
parquet = { version = "51", features = ["zstd"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = "0.20.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "=1.0.219", features = ["derive"] }
rmp-serde = "1.3"
serde_json = "1.0"
simd-json = "0.14"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

[lints]
workspace = true
