[package]
name = "hl_book"
version = "0.1.0"
edition = "2024"

[lib]
name = "hl_book"
crate-type = ["cdylib", "rlib"]

[dependencies]
compute_l4 = { path = "../compute_l4" }
fifo_listener = { path = "../fifo_listener" }
log = "0.4"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = "0.20.0"

[lints]
workspace = true
